prevented linebreak in header

--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,9 @@ body {
 	position:absolute;
 	top:0;
 	left:20px;
-	width:75%;
+	width:100%;
 	height:100px;
+	white-space:nowrap;
 }
 
 .nav {
